// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot renders the canvas in overlay layout 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  max-width: 1250px;
  margin: 0 auto;
  box-sizing: border-box;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="htl-ad"
    data-eager={true}
    data-sizes="970x250"
    data-unit="Desktop_TopLeaderboard"
  />
</div>
`;

exports[`snapshot renders the canvas in slideshow layout 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  max-width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="htl-ad"
    data-eager={true}
    data-sizes="970x250"
    data-unit="Desktop_TopLeaderboard"
  />
</div>
`;

exports[`snapshot renders the canvas in standard layout with image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  max-width: 1250px;
  margin: 0 auto;
  box-sizing: border-box;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="htl-ad"
    data-eager={true}
    data-sizes="970x250"
    data-unit="Desktop_TopLeaderboard"
  />
</div>
`;

exports[`snapshot renders the canvas in standard layout with video 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  max-width: 1250px;
  margin: 0 auto;
  box-sizing: border-box;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="htl-ad"
    data-eager={true}
    data-sizes="970x250"
    data-unit="Desktop_TopLeaderboard"
  />
</div>
`;
